--- a/views/index.html
+++ b/views/index.html
@@ -7,10 +7,10 @@
  	 <meta name="viewport" content="width=device-width, initial-scale=1">
 
   	<!-- bootstrap css -->
-	  <<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   	<!-- custom styles -->
- 	 <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+ 	 <link rel="stylesheet" type="text/css" href="../public/styles/styles.css">
 
 
 	<title>Dream Exhibition</title>
@@ -31,6 +31,50 @@
 		<img src="../public/assets/img/Miere-Laderman-ukeles.png">
 	</div>
 
+	<div class="container">
+ 	<h2>Form control: select</h2>
+  	<form>
+   	 <div class="form-group">
+   	 	 <div class="form-group">
+   			 <label for="exhibition-title">Exhibition Title</label>
+   			 <input type="text" class="form-control" id="exhibition-title" aria-describedby="emailHelp" placeholder="ex: Art in the Age of the Internet">
+ 		 </div>
+     	 <label for="artist">Select Your 3 Favorite Artist's from the List:</	label>
+      	<select class="form-control" id="artist">
+       	 <option>Artist 1</option>
+       	 <option>Artist 2</option>
+       	 <option>Artist 3</option>
+       	 <option>Artist 4</option>
+      	</select>
+       	 <select class="form-control" id="artist">
+       	 <option>Artist 1</option>
+       	 <option>Artist 2</option>
+       	 <option>Artist 3</option>
+       	 <option>Artist 4</option>
+     	 </select>
+       	 <select class="form-control" id="artist">
+       	 <option>Artist 1</option>
+       	 <option>Artist 2</option>
+       	 <option>Artist 3</option>
+       	 <option>Artist 4</option>
+     	 </select>
+    	 <label for="location">Select your dream location:</label>
+        <select class="form-control" id="location">
+     	   <option>Pompedu</option>
+     	   <option>SF Museum of Modern Art</option>
+     	   <option>The Louvre</option>
+     	   <option></option>
+     	 </select>
+     	  <div class="form-group">
+   			 <label for="exhibition-statement">Exhibition Statement</label>
+   			 <input type="text" class="form-control" id="exhibition-statement" aria-describedby="emailHelp" placeholder="Describe Exhibtion-Statement">
+ 		 </div>
+      
+   	 </div>
+  	</form>
+	</div>
+
+
 
 
 
@@ -49,6 +93,6 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
 
   <!-- custom script -->
-  <script type="text/javascript" src="public/scripts/app.js"></script>
+  <script type="text/javascript" src="../public/scripts/app.js"></script>
 
 </html>
