finished basics in html and css

--- a/views/index.html
+++ b/views/index.html
@@ -17,18 +17,21 @@
 </head>
 <body>
 
+
+  <div class="header">
 	<h1>Create Your Dream Exhibition</h1>
+  </div>
 	<!-- use background image in css -->
 
 	<div class="thumbnails">
-		<img src="../public/assets/img/charlotte-moorman.png">
-		<img src="../public/assets/img/eva-hesse.png">
-		<img src="../public/assets/img/hito_steyerl.png">
-		<img src="../public/assets/img/kara_walker.png">
-		<img src="../public/assets/img/louise_bourgeois.png">
-		<img src="../public/assets/img/lygia_clarke.png">
-		<img src="../public/assets/img/maya-deren.png">
-		<img src="../public/assets/img/Miere-Laderman-ukeles.png">
+		<img src="../public/assets/charlotte-moorman.png">
+		<img src="../public/assets/eva-hesse.png">
+		<img src="../public/assets/hito_steyerl.png">
+		<img src="../public/assets/kara_walker.png">
+		<img src="../public/assets/louise_bourgeois.png">
+		<img src="../public/assets/lygia_clarke.png">
+		<img src="../public/assets/maya-deren.png">
+		<img src="../public/assets/Miere-Laderman-ukeles.png">
 	</div>
 
 	<div class="container">
@@ -67,7 +70,7 @@
      	 </select>
      	  <div class="form-group">
    			 <label for="exhibition-statement">Exhibition Statement</label>
-   			 <input type="text" class="form-control" id="exhibition-statement" aria-describedby="emailHelp" placeholder="Describe Exhibtion-Statement">
+   			 <input type="text-area" class="form-control" id="exhibition-statement" aria-describedby="emailHelp" placeholder="Describe Exhibition-Statement">
  		 </div>
       
    	 </div>
