--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,12 +4,22 @@ body {
 	word-spacing: 1px;
 	letter-spacing: 0.5px;
 	line-height: 1.618em;
+	width: 1024px;
+	margin: auto;
+}
+
+/*heading*/
+
+.header {
+	background-image: url("../assets/alicja-2.jpg");
+	color: #FFFFFF;
+	height: 13em;
+	border-bottom: 0;	
 }
 
 h1 {
-	background-image: url("");
-	background-size: cover;
-	color: #FFFFFF;
+	padding: 2em;
+	background-color: rgba(193, 193, 193, .7);
 }
 
 
@@ -18,6 +28,8 @@ h1 {
 .thumbnails {
 	display: flex;
 	flex-direction: row;
+	align-content: stretch;
+	border-bottom: .75em #4f4f4f solid;
 
 }
 
@@ -27,4 +39,19 @@ h1 {
 /*FORM*/
 .container {
 	background: #C1C1C1;
+	border-radius: 7px;
 }
+
+.form-control {
+	display: inline-block;
+	padding: 1em;
+	margin: .5em;
+}
+
+
+
+
+
+
+
+
