changed exhibiton schema, added location schema, almost fixed append to form

--- a/views/index.html
+++ b/views/index.html
@@ -42,19 +42,19 @@
    			 <input type="text" class="form-control" id="exhibition-title"  placeholder="ex: Art in the Age of the Internet">
  		 </div>
      	 <label for="artist">Select Your 3 Favorite Artist's from the List:</	label>
-      	<select class="form-control" id="artist">
+      	<select class="form-control" id="artist1">
        	 <option>Artist 1</option>
        	 <option>Artist 2</option>
        	 <option>Artist 3</option>
        	 <option>Artist 4</option>
       	</select>
-       	 <select class="form-control" id="artist">
+       	 <select class="form-control" id="artist2">
        	 <option>Artist 1</option>
        	 <option>Artist 2</option>
        	 <option>Artist 3</option>
        	 <option>Artist 4</option>
      	 </select>
-       	 <select class="form-control" id="artist">
+       	 <select class="form-control" id="artist3">
        	 <option>Artist 1</option>
        	 <option>Artist 2</option>
        	 <option>Artist 3</option>
