fixed first dropdown with correct append

--- a/views/index.html
+++ b/views/index.html
@@ -43,10 +43,10 @@
  		 </div>
      	 <label for="artist">Select Your 3 Favorite Artist's from the List:</	label>
       	<select class="form-control" id="artist1">
-       	 <option>Artist 1</option>
+       	 <!-- <option>Artist 1</option>
        	 <option>Artist 2</option>
        	 <option>Artist 3</option>
-       	 <option>Artist 4</option>
+       	 <option>Artist 4</option> -->
       	</select>
        	 <select class="form-control" id="artist2">
        	 <option>Artist 1</option>
