added button and placed it on page

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -45,3 +45,12 @@ h1 {
 	padding: 1em;
 	margin: .5em;
 }
+
+#create-btn {
+    margin-left: 33%;
+    margin-right: auto;
+    margin-bottom: 3em;
+    width: 30%;
+
+
+}
