--- a/views/index.html
+++ b/views/index.html
@@ -34,33 +34,17 @@
 	</div>
 
 	<div class="container">
- 	<h2>Form control: select</h2>
   	<form>
    	 <div class="form-group">
    	 	 <div class="form-group">
    			 <label for="exhibition-title">Exhibition Title</label>
    			 <input type="text" class="form-control" id="exhibition-title"  placeholder="ex: Art in the Age of the Internet">
  		 </div>
-     	 <label for="artist">Select Your 3 Favorite Artist's from the List:</	label>
-      	<select class="form-control" id="artist1">
-       	 <!-- <option>Artist 1</option>
-       	 <option>Artist 2</option>
-       	 <option>Artist 3</option>
-       	 <option>Artist 4</option> -->
-      	</select>
-       	 <select class="form-control" id="artist2">
-       	 <option>Artist 1</option>
-       	 <option>Artist 2</option>
-       	 <option>Artist 3</option>
-       	 <option>Artist 4</option>
-     	 </select>
-       	 <select class="form-control" id="artist3">
-       	 <option>Artist 1</option>
-       	 <option>Artist 2</option>
-       	 <option>Artist 3</option>
-       	 <option>Artist 4</option>
-     	 </select>
-    	 <label for="location">Select your dream location:</label>
+     	 <label for="artist">Select Your 3 Favorite Artists from the List:</label>
+      	<select class="form-control" id="artist1"></select>
+       	 <select class="form-control" id="artist2"></select>
+       	 <select class="form-control" id="artist3"></select>
+    	 <label for="location">Select your Dream Location:</label>
         <select class="form-control" id="location">
      	   <option>Centre Pompidou</option>
      	   <option>SF Museum of Modern Art</option>
@@ -73,10 +57,12 @@
    			 <label for="exhibition-statement">Exhibition Statement</label>
    			 <input type="text" class="form-control" id="exhibition-statement"  placeholder="Describe Exhibtion-Statement">
  		 </div>
-      
+      <button type="button" class="btn btn-outline-dark" id = "create-btn">Create Exhibition</button>
    	 </div>
   	</form>
 	</div>
+   
+
 
 
 
