added buttons and sample exhibition

--- a/views/index.html
+++ b/views/index.html
@@ -51,16 +51,41 @@
      	   <option>Le Louvre</option>
          <option>The Whitney Museum</option>
      	   <option>The Hammer</option>
-         <option>The Broade</option>
+         <option>The Broad</option>
      	 </select>
      	  <div class="form-group">
    			 <label for="exhibition-statement">Exhibition Statement</label>
-   			 <input type="text" class="form-control" id="exhibition-statement"  placeholder="Describe Exhibtion-Statement">
+   			 <input type="text" class="form-control" id="exhibition-statement"  placeholder="Describe Exhibition Statement">
  		 </div>
       <button type="button" class="btn btn-outline-dark" id = "create-btn">Create Exhibition</button>
    	 </div>
   	</form>
-	</div>
+  </div>
+    <div class = "sample-exhibitions">
+      <div class="card">
+      <h5 class="card-header">Art In The Age of the Internet</h5>
+      <div class="card-body">
+        <h5 class="card-title">Hito Steyerl, Shigeko Kubota, Pipilotti Rist</h5>
+        <h5 class="card-title">The Hammer</h5>
+        <p class="card-text">Art in the Age of the Internet, 1989 to Today examines how the internet has radically changed the field of art, especially in its production, distribution, and reception. The exhibition comprises a broad range of works across a variety of mediums—including painting, performance, photography, sculpture, video, and web-based projects—that all investigate the extensive effects of the internet on artistic practice and contemporary culture. Themes explored in the exhibition include emergent ideas of the body and notions of human enhancement; the internet as a site of both surveillance and resistance; the circulation and control of images and information; possibilities for new subjectivities, communities, and virtual worlds; and new economies of visibility initiated by social media.</p>
+        <a href="#" class="btn btn-primary">Update</a>
+        <a href="#" class="btn btn-primary">Delete</a>
+      </div>
+    </div>
+    </div>
+    <div class = "sample-exhibitions">
+      <div class="card">
+      <h5 class="card-header">Future Conscious</h5>
+      <div class="card-body">
+        <h5 class="card-title">Alicja Kwade, Alina Szapocznicow, Sophie Calle</h5>
+        <h5 class="card-title">SF Museum of Modern Art</h5>
+        <p class="card-text">Creating a safe space, real or imaginary that explicitly relates the relationship between time and space of that reflects upon our current political situation without being overly involved in the duress we currently face.</p>
+        <a href="#" class="btn btn-primary">Update</a>
+        <a href="#" class="btn btn-primary">Delete</a>
+      </div>
+    </div>
+    </div>
+
    
 
 
