changed form data stuff - almost

--- a/views/index.html
+++ b/views/index.html
@@ -46,14 +46,16 @@
        	 <select class="form-control" id="artist3"></select>
     	 <label for="location">Select your Dream Location:</label>
         <select class="form-control" id="location">
-     	   <option>Centre Pompidou</option>
-     	   <option>SF Museum of Modern Art</option>
+     	   <option value = "faaaaaah">Centre Pompidou</option>
+     	   <option value = "faaaaaah">SF Museum of Modern Art</option>
      	   <option>Le Louvre</option>
          <option>The Whitney Museum</option>
      	   <option>The Hammer</option>
          <option>The Broad</option>
      	 </select>
      	  <div class="form-group">
+            <input type="radio" name="radio" value="radio2" id="r2">
+
    			 <label for="exhibition-statement">Exhibition Statement</label>
    			 <input type="text" class="form-control" id="exhibition-statement"  placeholder="Describe Exhibition Statement">
  		 </div>
